fix: Fixed a bug with word wrapping on the Badge component

--- a/packages/ossa/src/style/components/badge.scss
+++ b/packages/ossa/src/style/components/badge.scss
@@ -54,13 +54,16 @@
       6px,
       50%,
       auto,
-      24px,
+      auto,
       24px,
       $--color-red,
       20px
     );
 
+    min-width: 14px;
+    padding: 0 5px;
     transform: translateY(-50%) translateX(100%);
+    white-space: nowrap;
     @include font(18px,$--text-color-base-inverse);
 
     line-height: 24px;
